--- a/camronwilson-vue/src/styles/globals/_global.scss
+++ b/camronwilson-vue/src/styles/globals/_global.scss
@@ -32,6 +32,14 @@ body {
   }
 }
 
+.centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
 h1 {
   margin-block: .25rem;
   font-size: 2.75rem;
