--- a/camronwilson-vue/src/styles/components/_forms.scss
+++ b/camronwilson-vue/src/styles/components/_forms.scss
@@ -4,8 +4,14 @@ form {
     display: flex;
     flex-direction: column;
     width: 75%;
-    padding: 1.75rem;
-    background-color: $accent;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px $shadow;
+    padding: 2rem;
+    background-color: $translucent;
+    border-radius: 12px;
+    box-shadow: 1px 4px 4px $shadow;
+
+    @include responsive($mobile-size) {
+        width: 100%;
+        padding: 1.5rem;
+        border-radius: 8px;
+    }
 }
