--- a/camronwilson-vue/src/styles/meta/_colors.scss
+++ b/camronwilson-vue/src/styles/meta/_colors.scss
@@ -3,6 +3,7 @@ $text-light: #f5ebf5;
 $background-light: #fcfbfc;
 $background-dark: #272727;
 $shadow: #08010fa0;
+$shadow-faded: #08010f10;
 $purple: #663399;
 $purple-dark: #250a40;
 $purple-darker: #10021e;
@@ -11,3 +12,4 @@ $secondary: #9f6bb9;
 $accent: #d7a2f2;
 $tint: #e8ddf1;
 $link: #9900e5;
+$translucent: #66339940;
